# otus_hw4_sfinae

./: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_39d1bebc084ac23e8e5d976c5a765143.html  dir_39d1bebc084ac23e8e5d976c5a765143_dep.map  dir_39d1bebc084ac23e8e5d976c5a765143_dep.md5  dir_4e46a95dba17e04b9eff096bf247e3fe.html  dir_4e46a95dba17e04b9eff096bf247e3fe_dep.map  dir_4e46a95dba17e04b9eff096bf247e3fe_dep.md5  dir_5793f427ab339408edb0bbc198a7e34a.html  dir_5793f427ab339408edb0bbc198a7e34a_dep.map  dir_5793f427ab339408edb0bbc198a7e34a_dep.md5  dir_9f7f68dfc5ba46883d743c6064dfe9cf.html  dir_9f7f68dfc5ba46883d743c6064dfe9cf_dep.map  dir_9f7f68dfc5ba46883d743c6064dfe9cf_dep.md5  dir_e6d9e1ebfcdf99eaabbd72ff52a58fcc.html  dir_e6d9e1ebfcdf99eaabbd72ff52a58fcc_dep.map  dir_e6d9e1ebfcdf99eaabbd72ff52a58fcc_dep.md5  files.html  functions.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  (+48 more)
.github/workflows/: release.yml
search/: all_2.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_1.js  files_3.js  files_4.js  functions_1.js  searchdata.js  typedefs_0.js
